# i.mobilothon

./: README.md  app-release.apk  benchmark_report.txt  main.py  pyproject.toml  quick_benchmark.py
Collector service/: .env  collectors.py  main.py  utils.py
Collector service/i_mobilothon.egg-info/: PKG-INFO  requires.txt  top_level.txt
backend/: .gitignore  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  redis_client.py
backend/app/routers/: bookings.py  parkings.py  predictions.py  seller.py
collector-service/: .env.example  .gitignore  collectors.py  database_setup.sql  main.py  pyproject.toml  transform.py  utils.py
ml-service/: .env.example  .gitignore  README.md  pyproject.toml
ml-service/app/: config.py  main.py  models.py  predictions.py  preprocessing.py  summary.py  utils.py
ml-service/models/: dynamic_price_model.joblib
parking-app/: .easignore  .env.example  .gitignore  App.tsx  FEATURES.md  MAPBOX_BUILD_FIX.md  MAPBOX_MIGRATION_COMPLETE.md  README.md  SETUP.md  SUMMARY.md  SUPABASE_MAPBOX_SETUP.md  app.json  env.d.ts  package-lock.json  package.json
parking-app/src/config/: env.ts
parking-app/src/constants/: config.ts
parking-app/src/data/: freeHotspots.json  paidParkings.json
parking-app/src/lib/: supabase.ts
parking-app/src/navigation/: AppNavigator.tsx
parking-app/src/screens/: AddListingScreen.tsx  BookingConfirmationScreen.tsx  LoginScreen.tsx  MapHomeScreen.tsx  OTPVerificationScreen.tsx  ParkingDetailsScreen.tsx  ProfileScreen.tsx  QRScannerScreen.tsx  RatingScreen.tsx  SellerDashboardScreen.tsx  SignupScreen.tsx  VerifyOTPScreen.tsx
parking-app/src/services/: api.ts
parking-app/src/store/: appStore.ts
parking-app/src/types/: index.ts
parking-app/src/utils/: helpers.ts  mapbox.ts
